# Soundseal

./: app.py  error_log.txt  integrate.py  integrated_fpdb.pklz  packages.txt  requirements.txt
Audio-Watermarking/: .gitignore  makefile  pyproject.toml
Audio-Watermarking/.github/workflows/: perth.yaml
Audio-Watermarking/src/perth/: __init__.py  config.py  dummy_watermarker.py  utils.py  watermarker.py  waveform.py
Audio-Watermarking/src/perth/cli/: __init__.py  watermark_cli.py
Audio-Watermarking/src/perth/perth_net/: __init__.py
Audio-Watermarking/src/perth/perth_net/perth_net_implicit/: audio_processor.py  checkpoint_manager.py  perth_watermarker.py  utils.py
Audio-Watermarking/src/perth/perth_net/perth_net_implicit/model/: __init__.py  decoder.py  encoder.py  perth_net.py
fingerprinting/: audio_read.py  hash_table.py  mydb.pkl
