[project]
name = "resemble-perth"
version = "1.0.1"
description = "Audio Watermarking and Detection Library"
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Resemble AI", email = "team@resemble.ai" },
    { name = "Aditya", email = "aditya@resemble.ai" },
    { name = "John", email = "john@resemble.ai" },
    { name = "Manmay", email = "manmay@resemble.ai" },
]
keywords = [
    "audio watermarking",
    "perceptual watermarking",
    "neural audio processing",
    "robust watermarking",
    "ai safety",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "bitstring>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "Pillow>=9.0.0",
    "praat-parselmouth>=0.4.2",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "pyrubberband>=0.4.0",
    "PyWavelets>=1.3.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "soundfile>=0.12.0",
    "sox>=1.4.1",
    "tabulate>=0.9.0",
    "tensorboard>=2.14.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "tqdm>=4.64.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/perth"
Documentation = "https://github.com/resemble-ai/perth/blob/main/README.md"
"Issue Tracker" = "https://github.com/resemble-ai/perth/issues"
"Source Code" = "https://github.com/resemble-ai/perth"

[tool.uv.build-backend]
module-root = "src"      
module-name = "perth"

[project.scripts]
perth = "perth.cli.watermark_cli:main"

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"


